resume and wave

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       <a href="#work">Work</a>
       <a href="#contact">Contact Me</a>
       <!-- Link this to your resume! -->
-      <a href="/Users/juwonoh/homework/02-Advanced-CSS/Juwon-Oh-3.pdf">Resume</a>
+      <a href="/Users/juwonoh/homework/02-Advanced-CSS/Resume_2.pdf">Resume</a>
     </nav>
   </header>
 
   <!-- hero banner -->
-  <section class="hero-banner">
+  <section class="hero-banner" id="surf">
     <div>
       <h2>The details of Juwon Oh</h2>
     </div>
