--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="#work">Work</a>
       <a href="#contact">Contact Me</a>
       <!-- Link this to your resume! -->
-      <a href="/Users/juwonoh/homework/02-Advanced-CSS/Resume_2.pdf">Resume</a>
+      <a href="Resume_2.pdf">Resume</a>
     </nav>
   </header>
 
