--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="#work">Work</a>
       <a href="#contact">Contact Me</a>
       <!-- Link this to your resume! -->
-      <a href="https://docs.google.com/document/d/18dI-dS8XP8UxEqGsxz5bZXsGDiqG59ylotSwz4xGzw4/edit?usp=sharing">Resume</a>
+      <a href="Resume_2.pdf">Resume</a>
     </nav>
   </header>
 
